log/build_2023-11-10_10-58-08/mob_rob_loca/stderr.log
  File "/home/coderey/ros2_ws/install/mob_rob_loca/lib/python3.8/site-packages/mob_rob_loca/calib_odom.py", line 37
    station_OTR = Station(posX = 2.3, posY = 4.35, orientationZ = 0.0, orientationW = 1.0)
    ^
SyntaxError: invalid syntax

